code25_all/scala/3328527.txt
def createArray(size: Int): Array[Int] = {
  for (i <- 0 until size) yield i
}

(fragment of compare-images.scala):39: error: type mismatch;
 found   : RandomAccessSeq.Projection[Int]
 required: Array[Int]
      for (i <- 0 until size) yield i
            ^
one error found
!!!
discarding <script preamble>

until
Range
Array
def createArray(size: Int) = {
  for (i <- 0 until size) yield i
}

Array
def screateArray2: Array[Int] = {
  val a = Array(1,2,3,4,5)
  for (i <- a) yield i
}

def crop(data: Array[Int]): Array[Int] = (
  for (i <- 0 until data.size) yield i
).toArray

